--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,14 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.third{
+            
+            max-width: 800px;
+            margin: 0 auto;
+            color: #4a4848;
+            font-family: sans-serif;
+            padding-top: 50px;
+            padding-left: 20px;
+            padding-right: 20px;
+        
+        }
