--- a/ui/style.css
+++ b/ui/style.css
@@ -19,7 +19,7 @@ body {
 .img-medium {
     height: 200px;
 }
-.third{
+.container{
             
             max-width: 800px;
             margin: 0 auto;
